force-app/main/default/objects/Opportunity/fields/Expense_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Invoice_Amount__c</fullName>
    <label>Expense Invoice Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>