force-app/main/default/objects/Opportunity/fields/ExpenseInvoiceCreated__c.field-meta.xml
<CustomField>
    <fullName>ExpenseInvoiceCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExpenseInvoiceCreated</label>
    <type>Checkbox</type>
</CustomField>