force-app/main/default/objects/Opportunity/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Instructor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Certification__c.Course__c</field>
            <operation>equals</operation>
            <valueField>$Source.Course__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Scheduled Courses</relationshipLabel>
    <relationshipName>Scheduled_Courses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>