force-app/main/default/objects/Opportunity/fields/InvoiceAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAutoNumber__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>InvoiceAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>