force-app/main/default/objects/Opportunity/fields/Service_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Amount__c</fullName>
    <label>Service Invoice Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>