force-app/main/default/objects/Opportunity/fields/ServiceInvoiceCreated__c.field-meta.xml
<CustomField>
    <fullName>ServiceInvoiceCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServiceInvoiceCreated</label>
    <type>Checkbox</type>
</CustomField>