force-app/main/default/objects/Opportunity/fields/Stage_graphical__c.field-meta.xml
<CustomField>
    <fullName>Stage_graphical__c</fullName>
    <formula>TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>